trying to fix border and spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -80,6 +80,9 @@ fieldset, {
     display: flex;
     flex-direction: row;
     border: none;
+    text-decoration: none;
+    justify-content: center;
+    margin: auto;
 }
 
 label {
